Add Search Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.SearchActivity"
+            android:parentActivityName=".ui.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.xengar.android.conjugaisonfrancaise.ui.MainActivity" />
+        </activity>
+        <activity
             android:name=".ui.HelpActivity"
             android:label="@string/help"
             android:parentActivityName=".ui.MainActivity"
